# palworld-save-tools-stubs

./: .gitignore  LICENSE  METADATA.toml  Pipfile  README.md  cspell.json  pyproject.toml
.github/WORKFLOWS/: package.yaml
@tests/: stubtest_allowlist.txt
@tests/test_cases/: test_archive.py  test_cli_scripts.py  test_gvas.py  test_rawdata.py
palworld-save-tools-stubs/: archive.pyi  gvas.pyi  json_tools.pyi  palsav.pyi  paltypes.pyi
palworld-save-tools-stubs/commands/: convert.pyi  resave_test.pyi
palworld-save-tools-stubs/rawdata/: base_camp_module.pyi  build_process.pyi  character_container.pyi  common.pyi  connector.pyi  dynamic_item.pyi  group.pyi  map_model.pyi  map_object.pyi  work.pyi  work_collection.pyi  worker_director.pyi
palworld_save_tools/: gvas.pyi  paltypes.pyi
palworld_save_tools-stubs/: json_tools.pyi  paltypes.py  paltypes.pyi
palworld_save_tools-stubs/rawdata/: character.pyi  debug.pyi  item_container.pyi  map_concrete_model.pyi  map_concrete_model_module.pyi  map_object.pyi
palworld_save_tools/rawdata/: character.pyi  character_container.pyi  debug.pyi  foliage_model.pyi  item_container_slots.pyi  map_concrete_model.pyi  map_concrete_model_module.pyi  map_model.pyi  work_collection.pyi  worker_director.pyi
palworld_save_tools_stubs/: paltypes.py
parameterized/: parameterized.pyi
scripts/: extract_map_object_concrete_classes.py
