[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "palworld-save-tools-stubs"
authors = [{ name = "Jun Siang Cheah", email = "me@jscheah.me" },{ name = "Neko Boi Nick", email = "950594+thakyZ@users.noreply.github.com" }]
description = "Python stub file for repository cheahjs/palworld-save-tools"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/thakyz/palworld-save-tools-stubs"
Issues = "https://github.com/thakyz/palworld-save-tools-stubs/issues"

[tool.coverage.paths]
source = ["lxml-stubs"]

[tool.isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = true
balanced_wrapping = true
default_section = "THIRDPARTY"
use_parentheses = true

[tool.pyright]
include = ["palworld-save-tools-stubs"]
exclude = [
    "**/node_modules",
    "**/__pycache__"
]
reportPrivateUsage = false