[tool.poetry]
name = "palworld-save-tools-stubs"
version = "1.0.0"
description = "Python stub file for repository cheahjs/palworld-save-tools"
authors = ["thakyZ <950594+thakyZ@users.noreply.github.com>, Jun Siang Cheah <me@jscheah.me>"]
license = "MIT"
readme = "README.md"
homepage  = "https://github.com/thakyz/palworld-save-tools-stubs/"
repository   = "https://github.com/thakyz/palworld-save-tools-stubs"
keywords = ["palworld-save-tools", "palworld", "type-annotations", "pyright", "mypy", "palworld-save-tools-stubs"]
packages = [{ include = "palworld-save-tools-stubs/**/*.pyi" }]

[tool.poetry.dependencies]
python = ">=3.9"
palworld-save-tools = "^0.19.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
flake8 = "^7.0.0"
pip = "^24.0"
black = "^24.2.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["palworld-save-tools-stubs"]
exclude = ["tests"]
ignore = [
    ".venv",
    "**/__pycache__",
    "**/build",
    "typestubs",
    "examples",
]
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportMissingTypeArgument = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.9"
