[tool.poetry]
name = "palworld-save-tools-stubs"
version = "1.0.0"
description = "Python stub file for repository cheahjs/palworld-save-tools"
authors = ["thakyZ <950594+thakyZ@users.noreply.github.com>, Jun Siang Cheah <me@jscheah.me>"]
license = "MIT"
readme = "README.md"
homepage  = "https://github.com/thakyz/palworld-save-tools-stubs/"
repository   = "https://github.com/thakyz/palworld-save-tools-stubs"
keywords = ["palworld-save-tools", "palworld", "type-annotations", "pyright", "mypy", "palworld-save-tools-stubs"]
packages = [{ include = "palworld-save-tools-stubs/**/*.pyi" }, { include = "palworld-save-tools-stubs/py.typed" }]

[tool.poetry.dependencies]
python = ">=3.9"
palworld-save-tools = "*"
typing-extensions = "^4.10.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
flake8 = "*"
pip = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["palworld-save-tools-stubs"]
exclude = ["tests"]
ignore = [
    "env",
    "**/__pycache__",
    "**/build",
    "typestubs",
    "examples",
]
typeCheckingMode = "strict"
reportMissingImports = "error"
reportMissingTypeStubs = "error"
reportMissingTypeArgument = "error"
reportArgumentType = "off"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportUnknownParameterType = "error"
pythonVersion = "3.9"
